@startuml
title "08_server_full_qualified_name.kt Plantuml"

    '.Server
    interface "Server" as Server {
        + start() : Unit
		+ stop() : Unit
    }


    '.AbstractServer
    class "AbstractServer" as AbstractServer {
        + handleRequest() : Unit
		+ sendResponse() : Unit
    }


    '.ServerImpl
    class "ServerImpl" as ServerImpl {
        
    }


Server <|-- AbstractServer
AbstractServer <|-- ServerImpl

@enduml
